# OT-Velocity

./: .gitignore  README.md  Tutorial.ipynb  optim.py  pyproject.toml  requirements.txt  test_batch_HARISSA.py
.virtual_documents/Scripts/: Harrisa-myVelo.ipynb
Data/: HARISSA_truth_8.npy  result_SINCERITIES_signed.mat
Data/Curated/GSD/GSD-2000-1-50/: CARDAMOM_score.npy  CARDAMOM_score_0.npy  CARDAMOM_score_1.npy  ExpressionData-0.csv  ExpressionData-1.csv  GENIE3_score.npy  GENIE3_score.txt  GENIE3_score_0.npy  GENIE3_score_1.npy  HARISSA_score.npy  HARISSA_score_0.npy  HARISSA_score_1.npy  OTVelo-Corr.npy  OTVelo-Corr_0.npy  OTVelo-Corr_1.npy  OTVelo-Granger_penaltyEN.npy  OTVelo-Granger_penaltyEN_0.npy  OTVelo-Granger_penaltyEN_1.npy  SINCERITIES_score.npy  SINCERITIES_score_0.npy  SINCERITIES_score_0.txt  SINCERITIES_score_1.npy  SINCERITIES_score_1.txt
Data/Curated/GSD/GSD-2000-1-70/: CARDAMOM_score.npy  CARDAMOM_score_0.npy  CARDAMOM_score_1.npy  ExpressionData-0.csv  ExpressionData-1.csv  GENIE3_score.npy  GENIE3_score.txt  GENIE3_score_0.npy  GENIE3_score_1.npy  HARISSA_score.npy  HARISSA_score_0.npy  HARISSA_score_1.npy  OTVelo-Corr.npy  OTVelo-Corr_0.npy  OTVelo-Corr_1.npy  OTVelo-Granger_penaltyEN.npy  (+7 more)
Scripts/: Curated-myVelo.ipynb  Demo.ipynb  Harissa-myVelo.ipynb  Kouno-myVelo.ipynb  ScGEM-myVelo.ipynb
Utils/: evaluation_metrics.py  test_batch_BEELINE.py  utils_Velo.py
Utils/.ipynb_checkpoints/: test_batch_HARISSA-checkpoint.py  utils_Velo-checkpoint.py
otvelo/: optim.py  test_batch_BEELINE.py  test_batch_HARISSA.py  utils_Velo.py
(+6278 files in other folders)
