[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "otvelo"
version         = "0.1.0"
description     = "Optimal‑Transport RNA velocity (packaged fork)"
readme          = "README.md"
requires-python = ">=3.9"
license         = { file = "LICENSE" }
dependencies    = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=2.0",
    "networkx>=3.0",
    "pot>=0.9.3"
]

[tool.setuptools]          

[tool.setuptools.packages.find]
include = ["otvelo*"]             
